--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-passed">Default suite</span>
+              <span class="suite-name border-failed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\rvignes2\AppData\Local\Temp\testng-eclipse-369884494\testng-customsuite.xml</span>
+                    <span>C:\Users\rvignes2\AppData\Local\Temp\testng-eclipse--147162851\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,21 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content passed suite-Default_suite">
+                    <div class="method-list-content failed suite-Default_suite">
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runnerClass.runner" class="method navigator-link" hash-for-method="runScenario(&quot;sample scenario&quot;, &quot;Sample feature&quot;)">runScenario("sample scenario", "Sample feature")</a> <!-- method navigator-link -->
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="runnerClass.runner" class="method navigator-link" hash-for-method="runScenario(&quot;Placing the sample order to specific location&quot;, &quot;Buy products and validating cart&quot;)">runScenario("Placing the sample order to specific location", "Buy products and validating cart")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
+                    </div> <!-- method-list-content failed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -118,28 +118,33 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-passed">
+          <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">runnerClass.runner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;sample scenario&quot;, &quot;Sample feature&quot;)">
-                  </a> <!-- runScenario("sample scenario", "Sample feature") -->
+                  <a name="runScenario(&quot;Placing the sample order to specific location&quot;, &quot;Buy products and validating cart&quot;)">
+                  </a> <!-- runScenario("Placing the sample order to specific location", "Buy products and validating cart") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("sample scenario","Sample feature")</span>
+                  <span class="parameters">("Placing the sample order to specific location","Buy products and validating cart")</span>
+                  <div class="stack-trace">java.lang.Exception: Expected text Total : 130 but actual text is 120
+	at stepDefinition.Greenkart_StepDefinition.iVerifyOrders(Greenkart_StepDefinition.java:103)
+	at ✽.I will see the below details(file:///C:/Capgemini/testingRep/src/main/java/features/greenkart.feature:9)
+
+</div> <!-- stack-trace -->
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
+          </div> <!-- suite-Default_suite-class-failed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rvignes2\AppData\Local\Temp\testng-eclipse-369884494\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rvignes2\AppData\Local\Temp\testng-eclipse--147162851\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -200,12 +205,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'runnerClass.runner')
-data.setCell(0, 3, 14396);
+data.setCell(0, 3, 7548);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -233,22 +238,18 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">runnerClass.runner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@23592946)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@40d10481)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("sample scenario", "Sample feature")</span>
-                <span class="method-start">302 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">writeExtentReport</span>
-                <span class="method-start">14707 ms</span>
-              </div> <!-- configuration-class after -->
+                <span class="method-name">runScenario("Placing the sample order to specific location", "Buy products and validating cart")</span>
+                <span class="method-start">490 ms</span>
+              </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">14716 ms</span>
+                <span class="method-start">8043 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
