--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79b2da">  <td>24/07/04 16:28:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerClass.runner@5890e879]">runScenario</td> 
-  <td>main@1848289347</td>   <td></td> </tr>
-<tr bgcolor="79b2da">  <td>24/07/04 16:28:14</td>   <td>-290</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runnerClass.runner@5890e879]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1848289347</td>   <td></td> </tr>
-<tr bgcolor="79b2da">  <td>24/07/04 16:28:29</td>   <td>14414</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runnerClass.runner@5890e879]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1848289347</td>   <td></td> </tr>
-<tr bgcolor="74a4c0">  <td>24/07/04 16:28:29</td>   <td>14405</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;runner.writeExtentReport()[pri:0, instance:runnerClass.runner@5890e879]">&lt;&lt;writeExtentReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1848289347</td>   <td></td> </tr>
+<tr bgcolor="cdfb9b">  <td>24/08/03 22:46:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerClass.runner@6c4906d3]">runScenario</td> 
+  <td>TestNG-PoolService-0@870585013</td>   <td></td> </tr>
+<tr bgcolor="cdfb9b">  <td>24/08/03 22:46:20</td>   <td>-480</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runnerClass.runner@6c4906d3]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1624972302</td>   <td></td> </tr>
+<tr bgcolor="cdfb9b">  <td>24/08/03 22:46:28</td>   <td>7553</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runnerClass.runner@6c4906d3]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1624972302</td>   <td></td> </tr>
 </table>
